  - For now, only the password used to connect to the Acumulus API is considered
    sensitive. Privacy-related client data, e.g. (e-mail) addresses, are not
    protected intrinsically, though, the parameter being the whole message to
    send to Acumulus, they will often be protected as well.
  - For years, our own logging already masks passwords. This will not change by
    this feature.


7.6.2 (2023-02-01) (OC+WC only)
-------------------------------
Features:
- OC: Support for OpenCart 4. Note that OpenCart 4 will only run on PHP 8 and
  seems to contain some errors regarding tax totals not including tax on
  shipping costs (and therefore not in the amount to be paid).
- ALL: Acumulus customise invoice module may need access to container without
  having creating it, place the instance in a public static property.

bugs:
- WC: Error after fresh install: Plugin kon niet worden geactiveerd omdat hij
  een fatale fout veroorzaakt.
- OC (and perhaps others): test to see if new order status is in set of order
  statuses on which to send the invoice data to Acumulus should not use strict
  typing.
- OC: Define title for back button.


7.6.1 (2023-01-24) (PS only)
----------------------------
Features:
- ALL: The batch form now allows white space (at the start or end) in the
  from-to fields which will be removed. This allows for easier copy & paste from
  order lists.

Bugs:
- PS: Error after fresh install: Type Error: Return value of
  \Siel\Acumulus\PrestaShop\Config\ConfigStore::load() must be of the type
  array, bool returned.
- PS: Some changes had to be made to be compatible with PS 8.0.
- ALL: TypeError: Mailer::sendInvoiceAddMailResult(): Argument #3
  ($invoiceSourceReference) must be of type string, int given.

Refactorings:
- ALL: Shop/InvoiceManager.php: made trigger... methods abstract, as all shops
  implement them.
- ALL: protected method InvoiceManager::getInvoiceAddResult() renamed to
  createInvoiceAddResult().


7.6.0 (2023-01-17) (WC only)